--- a/css/style.css
+++ b/css/style.css
@@ -243,7 +243,7 @@ a:hover{ color:#2980b9; }
 #footer-logo{ float:right; margin-right:15px; }
 
 /* Featured Carousel */
-.carousel-item .featured-image{ width:290px; height:130px; margin-bottom:5px; }
+.carousel-item .featured-image{ width:290px; height:515px; margin-bottom:5px; }
 .carousel-item .post-icon{ width:45px; height:45px; position:relative; bottom:25px; margin:0 auto }
 .carousel-item .post-icon .fa-stack{ height:45px; width:45px; font-size:25px; }
 .carousel-item .post-icon .fa-picture-o{ font-size:18px; }
@@ -270,10 +270,12 @@ a:hover{ color:#2980b9; }
 
 .list_carousel li {
 	width: 290px;
-	margin-right:30px;
+	margin-left:10px;
+	margin-right:10px;
 	padding: 0;
 	display: block;
 	float: left;
+//	background-color:#aaa;
 }
 
 .list_carousel li.last{ margin-right:0px; }
